--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
             'org.junit.jupiter:junit-jupiter-api:5.4.2'
     )
     testImplementation "org.mockito:mockito-core:2.+"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 }
 
