--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,12 @@ test {
     useJUnitPlatform()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'MainKt'
+    }
+}
+
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
