--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
+apply plugin: 'application'
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id "com.github.johnrengelman.shadow" version "5.1.0"
 }
 
 group 'dk.w4'
 version '0.1'
+
+mainClassName = "dk.w4.downloadsorter.MainKt"
 
 repositories {
     mavenCentral()
@@ -30,7 +35,10 @@ test {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'MainKt'
+        attributes 'Main-Class': 'dk.w4.downloadsorter.MainKt'
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
